# rm_detector

./: CMakeLists.txt  README.md  nodelet_info.xml
cfg/: dynamic.cfg
docs/: classes.txt
docs/yolov8/: armor_class_224.pth
include/rm_bytetrack/: BYTETracker.h  STrack.h  dataType.h  kalmanFilter.h  lapjv.h
include/rm_detector/: detector.h  inferencer.h
launch/: armor_detector.launch  detector_test.launch
plugin/: yololayer.cu  yololayer.h
src/: detector.cpp  get_engine.cpp  inferencer.cpp
src/rm_bytetrack/: BYTETracker.cpp  STrack.cpp  kalmanFilter.cpp  lapjv.cpp
tools/: config.h  postprocess.cpp  postprocess.h  preprocess.cu  preprocess.h  types.h
utils/: calibrator.cpp  calibrator.h  config.h  logging.h  model.cpp  model.h  postprocess.cpp  postprocess.h  preprocess.cu  preprocess.h  types.h  utils.h
